--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><script src="https://kit.fontawesome.com/5885b6a640.js" crossorigin="anonymous"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    
+    <link href="//fonts.googleapis.com/css?family=Nothing You Could Do&subset=latin" rel="stylesheet" type="text/css">  
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
